--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="container">
         <div class="background">
             <img src="carbackground.jpg" >
+            <div class="logo">
+                <p>Smashy</p>
+            </div>
         </div>
         <div class="textcontainer">
                 <div class="con1">
@@ -20,32 +23,32 @@
                 <form>
                     <div>
                     <label for="firstname" >First Name</label>
-                    <br><input type="text" id="firstname">
+                    <br><input type="text" id="firstname" minlength="1" >
                     </div>
                     <div>
                         <label for="secondname" >Last Name</label>
-                        <br><input type="text" id="secondname">
+                        <br><input type="text" id="secondname" minlength="1">
                     </div>
                     <div>
                         <label for="email" >Email</label>
-                        <br><input type="email" id="email">
+                        <br><input type="email" id="email" >
                     </div>
                     <div>
                         <label for="phoneno" >Phone Number</label>
-                        <br><input type="tel" id="phoneno">
+                        <br><input type="tel" id="phoneno" >
                     </div>
                     <div>
                         <label for="password1" >Password</label>
-                        <br><input type="password" id="password1">
+                        <br><input type="password" id="password1" >
                     </div>
                     <div>
                         <label for="password2" >Confirm Password</label>
-                        <br><input type="password" id="password2">
+                        <br><input type="password" id="password2" >
                     </div>
 
                 </form>
                 <div class="con2">
-                    <button>Create Account</button>
+                    <button type="submit">Create Account</button>
                     <p>Already have an account?<a href="">Log in</a></p>
                 </div>
         
